[tool.poetry]
name = "advertorch"
version = "1.0.3"
description = ""
authors = ["João Batista Pereira Matos Júnior <matosjunior.jb@gmaol.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
torch = "1.6.0"
torchsummary = "^1.5.1"
torchvision = "0.7.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
