[tool.poetry]
name = "advertorch"
version = "1.0.3"
description = ""
authors = ["João Batista Pereira Matos Júnior <matosjunior.jb@gmaol.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7.10"
torch = "1.6.0"
torchvision = "0.7.0"
[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
